syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Economy {
    BigUInt total_supply = 1;
}

message Account {
    Address owner = 1;
    BigUInt balance = 2;
}

message Allowance {
    Address owner = 1;
    Address spender = 2;
    BigUInt amount = 3;
}

message InitialAccount {
    Address owner = 1;
    uint64 balance = 2;
}

message InitRequest {
    repeated InitialAccount accounts = 1;
    Policy policy = 2;
    uint64 base_minting_amount = 3 [(gogoproto.customname)="BaseMintingAmount"];
}

message Policy {
    uint64 deflation_factor_numerator = 1 [(gogoproto.customname)="DeflationFactorNumerator"];
    uint64 deflation_factor_denominator = 2 [(gogoproto.customname)="DeflationFactorDenominator"];
    BigUInt base_minting_amount = 3 [(gogoproto.customname)="BaseMintingAmount"];
    Address minting_account = 4 [(gogoproto.customname)="MintingAccount"];
}

message MintToGatewayRequest {
    BigUInt amount = 1;
}

message BurnRequest {
    Address owner = 1;
    BigUInt amount = 2;
}

// ERC20 messages
// See https://github.com/ethereum/EIPs/blob/master/EIPS/eip-20.md

// read only
message TotalSupplyRequest {

}

message TotalSupplyResponse {
    BigUInt total_supply = 1;
}

message BalanceOfRequest {
    Address owner = 1;
}

message BalanceOfResponse {
    BigUInt balance = 1;
}

message AllowanceRequest {
    Address owner = 1;
    Address spender = 2;
}

message AllowanceResponse {
    BigUInt amount = 1;
}

// volatile
message ApproveRequest {
    Address spender = 1;
    BigUInt amount = 2;
}

message ApproveResponse {

}

message TransferRequest {
    Address to = 1;
    BigUInt amount = 2;
}

message TransferResponse {

}

message TransferFromRequest {
    Address from = 1;
    Address to = 2;
    BigUInt amount = 3;
}

message TransferFromResponse {

}
